# cheribot

./: .gitignore  Cargo.toml
src/: challenges.rs  db.rs  main.rs  messages.rs
src/db/: mod.rs  models.rs
