[package]
name = "cheribot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", git="https://github.com/serenity-rs/serenity.git", rev="91ee5964b3afbe67ccb4dacaf2fb5c2da21dcb7a", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlite = "0.26"